[gd_scene load_steps=14 format=2]

[ext_resource path="res://scene/select_bg.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/pingpong.gd" type="Script" id=5]
[ext_resource path="res://data/music/MusMus-BGM-015.mp3" type="AudioStream" id=6]
[ext_resource path="res://theme/scoreLabel.tres" type="Theme" id=7]
[ext_resource path="res://data/audio/click4.ogg" type="AudioStream" id=9]
[ext_resource path="res://theme/mainButton.tres" type="Theme" id=10]

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.33 ]
}

[sub_resource type="Animation" id=3]
resource_name = "path"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.33, 0.66 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 517, 56 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.247059, 0.776471, 0.678431, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.129412, 0.184314, 0.176471, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Theme" id=10]
Panel/styles/panel = SubResource( 11 )

[node name="pingpong" type="Node"]
script = ExtResource( 5 )

[node name="bg" parent="." instance=ExtResource( 1 )]

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 496, 0, 528, 0, 528, 600, 496, 600 )

[node name="menu" parent="." instance=ExtResource( 4 )]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1024, 198.053 )
rotation = 1.57083
offset = 197.738
rotate = false
loop = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.241
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "path"
anims/RESET = SubResource( 2 )
anims/path = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 507, -56 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 512, 656 )
shape = SubResource( 4 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -472.0
margin_top = 24.0
margin_right = -432.0
margin_bottom = 141.0
theme = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -472.0
margin_top = -136.0
margin_right = -432.0
margin_bottom = -19.0
theme = ExtResource( 7 )

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Score" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="Panel" type="Panel" parent="Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -200.0
margin_right = 250.0
margin_bottom = 200.0
theme = SubResource( 10 )

[node name="Button" type="Button" parent="Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 60.0
margin_right = 110.0
margin_bottom = 184.0
grow_horizontal = 2
theme = ExtResource( 10 )
text = "主菜单"

[node name="VBoxContainer" type="VBoxContainer" parent="Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -188.0
margin_right = 80.0
margin_bottom = 50.0
alignment = 1

[node name="now" type="Label" parent="Score/VBoxContainer"]
margin_right = 320.0
margin_bottom = 117.0
theme = ExtResource( 7 )
text = "当前分:"

[node name="max" type="Label" parent="Score/VBoxContainer"]
margin_top = 121.0
margin_right = 320.0
margin_bottom = 238.0
theme = ExtResource( 7 )
text = "最高分:"

[node name="click" type="AudioStreamPlayer" parent="Score"]
stream = ExtResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Score/Button" to="." method="_on_Button_pressed"]
